# Nanazon-Desktop

./: .gitignore  BUILD.md  index.html  package-lock.json  package.json
scripts/: bump-version.sh  copy-node.sh  puppeteer-service.cjs  puppeteer-service.src.cjs
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: browser.rs  lib.rs  main.rs
src/components/: Dashboard.tsx  LanguageSwitcher.tsx  Login.tsx  Toast.tsx
src/i18n/: I18nContext.tsx  translations.ts
src/services/: socket.ts
