[package]
name = "nanazon-tauri"
version = "0.1.0"
description = "Nanazon Share - Desktop App"
authors = ["you"]
edition = "2021"

[lib]
name = "nanazon_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.33"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
hostname = "0.4"
dirs = "6"
tokio = { version = "1", features = ["sync", "time", "macros", "process", "io-util"] }
